Sutter Health/src/objects/Sales_Inquiry__c.object
<CustomObject>
    <description>SHP Sales will use to record sales inquiry calls transferred over from Sutter Member Services call center. The process functionality for this object will work very similar to a Service Request or Case until the SHP Service goes live with full functionality.</description>
    <fields>
        <fullName>AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Capture the Account Name for which the Contact is calling for Sales Inquiry</description>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>SHP Sales Broker</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>SHP Sales Broker Read Only</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>SHP Sales Employer</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>SHP Sales Employer Read Only</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Inquiries</relationshipLabel>
        <relationshipName>Sales_Inquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Caller_Name__c</fullName>
        <description>The name of the broker rep or contact calling with Sales Inquiry</description>
        <label>Caller Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the broker contact calling with Sales Inquiry</description>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountName__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Sales Inquiries</relationshipLabel>
        <relationshipName>Sales_Inquiries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inquiry_Details__c</fullName>
        <description>Complete details for the Sales Inquiry call. To capture all possible information this field</description>
        <label>Inquiry Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <description>Capture phone extension number</description>
        <label>Phone Extension</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Phone number of the contact calling with Sales Inquiry</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status for Sales Inquiry</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Inquiry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Caller_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Phone_Extension__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Sales Inquiries</label>
    </listViews>
    <listViews>
        <fullName>My_Sales_Inquiries</fullName>
        <columns>NAME</columns>
        <columns>Caller_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Phone_Extension__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>My Sales Inquiries</label>
    </listViews>
    <listViews>
        <fullName>SHP_Sales_Queue</fullName>
        <columns>NAME</columns>
        <columns>Caller_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Phone_Extension__c</columns>
        <columns>Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>SHP Sales Queue</label>
        <queue>SHP_Sales</queue>
    </listViews>
    <listViews>
        <fullName>Sales_Inquiries_From_Yesterday</fullName>
        <columns>NAME</columns>
        <columns>Caller_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Phone_Extension__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Sales Inquiries From Yesterday</label>
    </listViews>
    <listViews>
        <fullName>Sales_Inquiries_Last_Month</fullName>
        <columns>NAME</columns>
        <columns>Caller_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Phone_Extension__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_MONTH</value>
        </filters>
        <label>Sales Inquiries Last Month</label>
    </listViews>
    <listViews>
        <fullName>Sales_Inquiries_Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Caller_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Phone_Extension__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Sales Inquiries Last Week</label>
    </listViews>
    <listViews>
        <fullName>Sales_Inquiries_This_Month</fullName>
        <columns>NAME</columns>
        <columns>Caller_Name__c</columns>
        <columns>Phone__c</columns>
        <columns>Phone_Extension__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Sales Inquiries This Month</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Sales Inquiry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Inquiries</pluralLabel>
    <recordTypes>
        <fullName>SHP_Sales_Inquiry</fullName>
        <active>true</active>
        <description>The is defined for custom object - Sales Inquiry</description>
        <label>SHP Sales Inquiry</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Validate_Phone</fullName>
        <active>true</active>
        <description>Validate Phone for correct 10 digit entry</description>
        <errorConditionFormula>IF( 
ISBLANK(  Phone__c ) , false , NOT(REGEX(  Phone__c , &quot;\\D*?(\\d\\D*?){10}&quot;)))</errorConditionFormula>
        <errorDisplayField>Phone__c</errorDisplayField>
        <errorMessage>Please enter all ten digits of phone number</errorMessage>
    </validationRules>
</CustomObject>